# natter-challenge

./: README.md  pyproject.toml
src/cli/: main.py
src/domain/: models.py
src/exporters/: base.py  implementations.py
src/scrapers/: base.py  client.py  crawler.py  parser.py
src/services/: aggregator.py  scraper.py
tests/: conftest.py  test_aggregator.py  test_crawler.py  test_integration.py  test_models.py  test_parser.py
